# kova

blockchain/: Cargo.toml  Makefile  README.md
blockchain/contracts/domains_registry/: Cargo.toml
blockchain/contracts/domains_registry/src/: lib.rs
blockchain/contracts/governance/: Cargo.toml
blockchain/contracts/governance/src/: lib.rs
blockchain/contracts/l1/: Cargo.toml
blockchain/contracts/l1/src/: lib.rs
blockchain/contracts/privacy_pools/: Cargo.toml
blockchain/contracts/privacy_pools/src/: lib.rs
blockchain/contracts/rollup_bridge/: Cargo.toml
blockchain/contracts/rollup_bridge/src/: lib.rs
blockchain/contracts/staking/: Cargo.toml
blockchain/contracts/staking/src/: lib.rs
blockchain/domains/evm_domain/: Cargo.toml
blockchain/domains/evm_domain/src/: lib.rs
blockchain/domains/payment_domain/: Cargo.toml
blockchain/domains/payment_domain/src/: lib.rs
blockchain/domains/privacy_domain/: Cargo.toml
blockchain/domains/privacy_domain/src/: lib.rs
blockchain/domains/wasm_domain/: Cargo.toml
blockchain/domains/wasm_domain/src/: lib.rs
blockchain/frontend/apps/web/: next.config.js  package.json  tsconfig.json
blockchain/frontend/apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
blockchain/frontend/apps/web/app/components/: Panel.tsx
blockchain/frontend/apps/web/app/dev/: page.tsx
blockchain/frontend/apps/web/app/domains/: page.tsx
blockchain/frontend/apps/web/app/explorer/: page.tsx
blockchain/frontend/apps/web/app/governance/: page.tsx
blockchain/frontend/apps/web/app/lib/: api.ts
blockchain/frontend/apps/web/app/sequencer/: layout.tsx  page.tsx
blockchain/frontend/apps/web/app/staking/: page.tsx
blockchain/frontend/apps/web/app/testnet/: page.tsx
blockchain/frontend/apps/web/app/wallet/: page.tsx
blockchain/frontend/apps/web/types/node/: index.d.ts  package.json
blockchain/indexer/: README.md
blockchain/indexer/api/: package.json  tsconfig.json
blockchain/indexer/api/src/: server.ts
blockchain/indexer/api/types/node/: index.d.ts
blockchain/indexer/indexer-core/: Cargo.toml
blockchain/indexer/indexer-core/migrations/: 0001_init.sql
blockchain/indexer/indexer-core/src/: lib.rs
blockchain/mixnet/client/: Cargo.toml
blockchain/mixnet/client/src/: lib.rs
blockchain/mixnet/gateway/: Cargo.toml
blockchain/mixnet/gateway/src/: main.rs
blockchain/ops/ci/: README.md
blockchain/ops/docker/: docker-compose.devnet.yml  docker-compose.testnet.yml  faucet.Dockerfile  genesis.json  indexer.Dockerfile  node.Dockerfile  sequencer.Dockerfile
blockchain/ops/docker/monitoring/: alert_rules.yml  prometheus.yml
blockchain/ops/docker/scripts/: testnet-down.sh  testnet-up.sh
blockchain/ops/faucet/: Cargo.toml
blockchain/ops/faucet/src/: main.rs
blockchain/protocol/consensus/: Cargo.toml
blockchain/protocol/consensus/src/: lib.rs
blockchain/protocol/consensus/tests/: property.rs  smoke.rs
blockchain/protocol/da/: Cargo.toml
blockchain/protocol/da/src/: lib.rs
blockchain/protocol/da/tests/: basic.rs  property.rs
blockchain/protocol/networking/: Cargo.toml
blockchain/protocol/networking/src/: lib.rs
blockchain/protocol/node/: Cargo.toml
blockchain/protocol/node/src/: main.rs
blockchain/protocol/runtime/: Cargo.toml
blockchain/protocol/runtime/src/: lib.rs
blockchain/protocol/runtime/src/domains/: evm.rs  mod.rs  wasm.rs
blockchain/protocol/runtime/tests/: domains.rs  fuzz_tx.rs  staking.rs  transfer.rs
blockchain/protocol/state/: Cargo.toml
blockchain/protocol/state/src/: lib.rs
blockchain/protocol/vm/: Cargo.toml
blockchain/protocol/vm/src/: lib.rs
blockchain/sdk/cli/: Cargo.toml
blockchain/sdk/cli/src/: main.rs
blockchain/sdk/sdk-python/: pyproject.toml
blockchain/sdk/sdk-python/src/kova_sdk/: __init__.py
blockchain/sdk/sdk-rust/: Cargo.toml
blockchain/sdk/sdk-rust/src/: lib.rs
blockchain/sdk/sdk-ts/: package.json  tsconfig.json
blockchain/sdk/sdk-ts/src/: index.ts
blockchain/sdk/sdk-ts/types/node/: index.d.ts
blockchain/sequencer/api/: Cargo.toml
blockchain/sequencer/api/src/: main.rs
blockchain/sequencer/coordinator/: Cargo.toml
blockchain/sequencer/coordinator/src/: main.rs
blockchain/sequencer/core/: Cargo.toml
blockchain/sequencer/core/src/: lib.rs
blockchain/zk/: README.md
blockchain/zk/artifacts/: README.md  block.elf  privacy.elf  rollup.elf
blockchain/zk/core/: Cargo.toml
blockchain/zk/core/src/: lib.rs
blockchain/zk/programs/block/: Cargo.toml
blockchain/zk/programs/block/src/: lib.rs
blockchain/zk/programs/privacy/: Cargo.toml
blockchain/zk/programs/privacy/src/: lib.rs
blockchain/zk/programs/rollup/: Cargo.toml
blockchain/zk/programs/rollup/src/: lib.rs
blockchain/zk/sp1/: Cargo.toml
blockchain/zk/sp1/src/: lib.rs
docs/: implementation_blueprint.md  init.md  spec.md  spec_alignment_review.md  spec_scope_delta.md
