[package]
name = "indexer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
runtime = { path = "../../protocol/runtime" }
sqlx = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
blake3 = "1"
bincode = "1"

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

