[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
runtime = { path = "../runtime" }
state = { path = "../state" }
da = { path = "../da" }
tokio = { workspace = true }
uuid = { workspace = true }
bincode = "1"
blake3 = "1"
ed25519-dalek = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

