[package]
name = "da"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
runtime = { path = "../runtime" }
tokio = { workspace = true }
blake3 = "1"
rand = { workspace = true }

