[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
runtime = { path = "../runtime" }
consensus = { path = "../consensus" }
state = { path = "../state" }
tokio = { workspace = true }
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "noise", "tcp", "dns", "quic", "macros", "serde"] }
futures = "0.3"

