[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
consensus = { path = "../consensus" }
state = { path = "../state" }
da = { path = "../da" }
vm = { path = "../vm" }
networking = { path = "../networking" }
runtime = { path = "../runtime" }
axum = { workspace = true }
blake3 = "1"
bincode = "1"
hex = { workspace = true }

