[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
consensus = { path = "../consensus" }
state = { path = "../state" }
da = { path = "../da" }
vm = { path = "../vm" }
networking = { path = "../networking" }
runtime = { path = "../runtime" }
axum = { workspace = true }
blake3 = "1"
bincode = "1"
hex = { workspace = true }
ed25519-dalek = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
zk-core = { path = "../../zk/core" }
zk-sp1 = { path = "../../zk/sp1" }
zk-program-block = { path = "../../zk/programs/block" }
zk-program-rollup = { path = "../../zk/programs/rollup" }
zk-program-privacy = { path = "../../zk/programs/privacy" }
libp2p = { version = "0.54", features = ["identity", "macros", "quic", "gossipsub", "dns", "tcp", "serde", "tokio"] }

