[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
state = { path = "../state" }
tokio = { workspace = true }
blake3 = "1"
bincode = "1"
futures = "0.3"
ed25519-dalek = { workspace = true }
rand = { workspace = true }

