[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
state = { path = "../state" }
tokio = { workspace = true }
blake3 = "1"
bincode = "1"
futures = "0.3"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
zk-core = { path = "../../zk/core" }
zk-program-privacy = { path = "../../zk/programs/privacy" }
async-trait = "0.1"
revm = { version = "33.1.0", default-features = false, features = ["std"] }
wasmtime = { version = "22", default-features = false, features = ["cranelift"] }
base64 = "0.21"

[dev-dependencies]
proptest = { workspace = true }
