[package]
name = "sequencer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sequencer-core = { path = "../core" }
runtime = { path = "../../protocol/runtime" }

