[package]
name = "sequencer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
runtime = { path = "../../protocol/runtime" }
da = { path = "../../protocol/da" }
async-trait = { workspace = true }
zk-core = { path = "../../zk/core" }
zk-program-rollup = { path = "../../zk/programs/rollup" }
uuid = { workspace = true }
blake3 = "1"

