 [package]
 name = "zk-sp1"
 version = "0.1.0"
 edition = "2021"

[features]
default = ["sp1"]
stub = []
sp1 = ["sp1-sdk"]

 [dependencies]
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 zk-core = { path = "../core" }
 blake3 = "1"
 tokio = { workspace = true }
 uuid = { workspace = true }

 [dependencies.sp1-sdk]
version = "1.1"
 optional = true
